# rust_news

./: Cargo.toml  configuration.yaml  init_db.ps1  init_db.sh  init_db_final.ps1
migrations/: 20250302021755_create_subscriptions_table.sql  20250302055141_create_subscriptions_table.sql  20250306093222_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
